refactor: add logger endpoint
